Reorganizacion scss y modificacion del footer

--- a/html/menu.html
+++ b/html/menu.html
@@ -183,7 +183,7 @@
                 </div><!-- End Card -->
                 <div class="col-sm-6 col-md-4 col-lg-3 ">
                     <div class="card">
-                        <img src="../img/Empanadas/empanadas_salteñas.jpg" alt="Empanadas salteñas"
+                        <img src="../img/Empanadas/empanadas_saltenias.jpg" alt="Empanadas salteñas"
                             class="card-img-top">
 
                         <div class="card-body">
