--- a/html/sucursal.html
+++ b/html/sucursal.html
@@ -9,8 +9,16 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <!--Link css -->
   <link rel="stylesheet" href="../css/estilos.css">
-  <title>Sucursales</title>
+  <!-- shortcut icon -->
+  <link rel="shortcut icon" href="../img/Utiles/newLogoRedLight.png">
+  <title>PIZZA PARTY / Nuestras Sucursales</title>
+  <!-- metas seo -->
+  <meta name="description"
+    content="Tenemos Sucursales en todos los barrios de CABA. Encontranos en tu zona para probar la mejor pizza a la piedra.">
+  <meta name="author" content="Lucas Vasquez">
+  <meta name="keywords" content="Pizza , Empanadas, Delivery, Sucursales , Av.Corrientes ,Almagro">
 </head>
 
 <body>
@@ -131,14 +139,50 @@
   <!--End Main-->
 
   <footer class="footer container-fluid " id="redes">
-    <p class="footer_titulo fs-1 ">Redes Sociales</p>
-    <div class="redes fs-3 gap-2">
-      <a href="#" class="footer_redes" id="insta">Instagram <img class="footer_img" src="../img/iconos/instagram.png"
-          alt="icono de instagram"></a>
-      <a href="#" class="footer_redes" id="face">Facebook <img class="footer_img" src="../img/iconos/facebook.png"
-          alt="icono de facebook"></a>
-      <a href="#" class="footer_redes" id="whatsapp">Whatsapp <img src="../img/iconos/whatsapp.png"
-          alt="icono de whatsapp" class="footer_img"></a>
+
+    <div class="footer_container ">
+      <div class="link_containers">
+        <div>
+          <p class="footer_titulo  ">Links</p>
+          <ul class="fs-5">
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="sucursal.html">Sucursales</a></li>
+            <li><a href="opinion.html">Opinion</a></li>
+          </ul>
+        </div>
+        <div>
+          <p class="footer_titulo ">Menu</p>
+          <ul class="fs-5">
+            <li><a href="menu.html#pizza">Pizza</a></li>
+            <li><a href="menu.html#empanada">Empanadas</a></li>
+            <li><a href="menu.html#minuta">Minutas</a></li>
+            <li><a href="menu.html#postre">Postres</a></li>
+            <li><a href="menu.html#bebida">Bebidas</a></li>
+            <li><a href="menu.html#descuento">Descuentos</a></li>
+          </ul>
+        </div>
+        <div>
+          <p class="footer_titulo ">
+            Delivery
+          </p>
+          <ul class="fs-5">
+            <li><a href="delivery.html#promos">Promociones</a></li>
+            <li><a href="delivery.html#pizza">Pizza</a></li>
+            <li><a href="delivery.html#empanada">Empanadas</a></li>
+            <li><a href="delivery.html#minuta">Minutas</a></li>
+            <li><a href="delivery.html#bebida">Bebida</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="redes fs-3 gap-2 link_containers">
+        <p class="footer_titulo ">Redes Sociales</p>
+        <a href="#" class="footer_redes" id="insta">Instagram <img class="footer_img" src="../img/iconos/instagram.png"
+            alt="icono de instagram"></a>
+        <a href="#" class="footer_redes" id="face">Facebook <img class="footer_img" src="../img/iconos/facebook.png"
+            alt="icono de facebook"></a>
+        <a href="#" class="footer_redes" id="whatsapp">Whatsapp <img src="../img/iconos/whatsapp.png"
+            alt="icono de whatsapp" class="footer_img"></a>
+      </div>
     </div>
     <p class="footer_text fs-5">© 2022 Vasquez — All rights reserved.</p>
   </footer>
